[gd_scene load_steps=19 format=3 uid="uid://cbjouylrbq1s8"]

[ext_resource type="Script" uid="uid://tfsfn33tq7a1" path="res://scripts/room3.gd" id="1_4aq8u"]
[ext_resource type="Texture2D" uid="uid://c2i5iyjbht7sw" path="res://assets/achtergrond3.png" id="1_j3vgb"]
[ext_resource type="PackedScene" uid="uid://d1awp8vrnet6x" path="res://scenes/hint.tscn" id="6_ggopl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3r3bf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_op2f5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_17neo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ggopl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4x0d7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bcdn3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kk34u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iompt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_whsl6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xfje"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wius"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dgrhu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7801"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6rm3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iaiwk"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4aq8u")

[node name="achtergrond3" type="Sprite2D" parent="."]
position = Vector2(579, 290)
scale = Vector2(1.5234479, 1.2702464)
texture = ExtResource("1_j3vgb")

[node name="showq10" type="Button" parent="."]
layout_mode = 0
offset_left = 262.0
offset_top = 36.0
offset_right = 469.0
offset_bottom = 172.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_3r3bf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_op2f5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_17neo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ggopl")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4x0d7")

[node name="hideq10" type="Button" parent="."]
layout_mode = 0
offset_left = 1012.0
offset_top = 90.0
offset_right = 1092.0
offset_bottom = 158.0

[node name="ShowHint" type="Button" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 240.0
offset_right = 454.0
offset_bottom = 291.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_bcdn3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kk34u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iompt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_whsl6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xfje")

[node name="antwoordinvullen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 521.0
offset_top = 286.0
offset_right = 863.0
offset_bottom = 327.0

[node name="showantwoordinvullen" type="Button" parent="."]
layout_mode = 0
offset_left = 703.0
offset_top = 401.0
offset_right = 841.0
offset_bottom = 449.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_8wius")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dgrhu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o7801")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_w6rm3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_iaiwk")

[node name="TimerLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Hint" parent="." instance=ExtResource("6_ggopl")]
visible = false
position = Vector2(4, -3)

[connection signal="pressed" from="ShowHint" to="Hint" method="_on_show_hint_pressed"]
[connection signal="text_submitted" from="antwoordinvullen" to="." method="_on_antwoordinvullen_text_submitted"]
[connection signal="pressed" from="showantwoordinvullen" to="." method="_on_showantwoordinvullen_pressed"]
